--- a/src/components/Graphic/style.css
+++ b/src/components/Graphic/style.css
@@ -13,3 +13,27 @@
     margin-top: 0;
     font-size:  61px;
 }
+
+.container-items{
+    display: grid;
+    width: calc(100% - 187px);
+    grid-template-columns: 33% 33% 33%;
+    grid-column-gap: 56px;
+    grid-row-gap: 67px;
+}
+.card-item img{
+    width: 100%;
+    height: 100%;
+}
+.card-item{
+    box-shadow:0px 8px 6px rgba(0, 0, 0, 0.25);
+    position: relative;
+}
+.card-item h3{
+    font-weight: normal;
+    position: absolute;
+    font-size: 36px;
+    top:91px;
+    left: -21px;
+    max-width: 176px;
+}
