--- a/src/components/Graphic/style.css
+++ b/src/components/Graphic/style.css
@@ -12,6 +12,7 @@
 #graphic header h1{
     margin-top: 0;
     font-size:  61px;
+    text-shadow: 0px 8px 6px rgba(0, 0, 0, 0.25);
 }
 
 .container-items{
@@ -24,9 +25,10 @@
 .card-item img{
     width: 100%;
     height: 100%;
+    box-shadow:0px 8px 6px rgba(0, 0, 0, 0.25);
+
 }
 .card-item{
-    box-shadow:0px 8px 6px rgba(0, 0, 0, 0.25);
     position: relative;
 }
 .card-item h3{
