--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -23,6 +23,7 @@
     text-decoration: none;
     margin: 20px;
     font-weight: normal;
+    cursor: pointer;
 }
 .navbar-items li.navbar-item a:hover{
     color: var(--green-color);
