--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -17,3 +17,11 @@ body{
 h1{
     font-weight: normal;
 }
+
+.topLink{
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    color: white;
+    cursor:pointer;
+}
