--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -48,3 +48,22 @@
 .social_links ul li a:hover{
     color: var(--green-color);
 }
+
+
+@media screen and (max-width:400px){
+    #footer{
+        padding: 1rem;
+        background-size:auto 100%;
+        background-position-y: -20rem;
+    }
+    .social_links{
+        max-width: 100vw;
+    }
+    .social_links ul {
+        display: grid;
+        grid-template-columns: 40% 40%;
+    }
+    .social_links ul li a{
+        margin: 0;
+    }
+}
