--- a/src/components/Graphic/style.css
+++ b/src/components/Graphic/style.css
@@ -26,7 +26,6 @@
     width: 100%;
     height: 100%;
     box-shadow:0px 8px 6px rgba(0, 0, 0, 0.25);
-
 }
 .card-item{
     position: relative;
@@ -38,4 +37,33 @@
     top:91px;
     left: -21px;
     max-width: 176px;
+}
+
+@media screen and (max-width:400px){
+    #graphic{
+        margin: 0 !important;
+        padding: 0 !important;
+        background-size: auto 100%;
+        background-position: right;
+        background-repeat: no-repeat;
+        min-height: 150vh !important;
+    }
+    .container-items{
+        width: 100% !important;
+        grid-template-columns: 45% 45% !important;
+        grid-column-gap: 5% !important;
+        grid-row-gap: 10% !important;
+        justify-content: center;
+
+    }
+    .card-item img{
+        width: 100%;
+    }
+    .card-item h3{
+        font-weight: normal;
+        position: absolute;
+        font-size: 15px !important;
+        top:100% !important;
+        left: 0 !important;
+    }
 }
