--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -16,3 +16,10 @@
 #page-header-title span{
     color:var(--green-color);
 }
+
+
+@media screen and (max-width:400px){
+    #header{
+        display: none;
+    }
+}
