--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -19,7 +19,8 @@
 
 
 @media screen and (max-width:400px){
-    #header{
-        display: none;
+    #page-header-title{
+        font-size: 30px;
+        color: white;
     }
 }
