--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -31,6 +31,18 @@
 
 @media screen and (max-width:400px){
     #navbar{
-        display: none;
+        width: 100% !important;
+        padding: 0 !important;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+    }
+    #title-site{
+        font-size: 15px;
+        margin: auto;
+        margin-bottom: 20rem;
+    }
+    .navbar-items li.navbar-item a{
+        font-size: 15px;
     }
 }
