--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 41px;
     left: 0;
-    width:100vw;
+    width:100%;
     padding: 0 2rem;
     height: 42px;
     display: flex;
